typescript/checker/tests/conformance/es6/templates/templateStringUnterminated5.ts.stderr
error: Unterminated template
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated5.ts:2:1
  |
2 | `\\\\\`
  | ^^^^^^^

